# tiny_bean

./: README.md  build_and_ship.sh
server/: .env  Cargo.toml  build_for_tinybean.sh  diesel.toml  ship-to-tinybean.sh  tinybean.db
server/scripts/: build_and_ship.sh  database_setup.sh
server/src/: main.rs
server/src/api/: mod.rs  server.rs  ui.rs
server/src/db/: mod.rs
server/src/db/migrations/2024-11-17-153550_drink_tables/: down.sql  up.sql
server/src/db/migrations/2024-11-18-122338_order_tables/: down.sql  up.sql
server/src/db/migrations/2024-11-24-143655_add_enum_vals/: down.sql  up.sql
server/src/generic/: errors.rs  mapping.rs  mod.rs  models.rs
server/src/orders/: controller.rs  mod.rs  router.rs  service.rs  storage.rs
server/src/storage/: mod.rs
server/src/test/: controller.rs  mod.rs  router.rs  service.rs
ui/: README.md  build_and_ship.sh  bun.lockb  eslint.config.js  index.html  package.json  ship-to-tinybean.sh  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
ui/src/: App.css  App.tsx  Banner.css  Banner.tsx  Button.tsx  Card.css  Card.tsx  CardExpanded.tsx  LandingPage.tsx  LinkButton.tsx  OrderPlacePage.tsx  OrderViewPage.tsx  index.css  orderOptions.ts  types.ts
ui/src/api/: client.ts
ui/src/components/: ActionButtons.tsx  Banner.tsx  LinkButton.tsx  Routing.tsx
ui/src/components/Banner/: Banner.tsx
ui/src/data/: addOnOptions.ts  drinkOptions.ts  extraOptions.ts  orderOptions.ts  orderState.ts
ui/src/pages/: LandingPage.tsx  OrderPlacePage.css  OrderPlacePage.tsx  OrderViewPage.tsx
ui/src/types/: types.ts
(+74 files in other folders)
