[package]
name = "tiny_bean"
version = "0.1.0"
edition = "2021"

[target.arm-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-gcc"

[dependencies]
axum = "0.7.7"
axum-extra = "0.9.4"

tokio = { version = "1.41.0", features = ["full"] }
serde = { version = "1.0.213", features = ["derive"] }

tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
