[package]
name = "tiny_bean"
version = "0.1.0"
edition = "2021"

[target.arm-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-gcc"

[dependencies]
axum = "0.7.7"
axum-extra = "0.9.4"

tokio = { version = "1.41.0", features = ["full"] }
serde = { version = "1.0.213", features = ["derive"] }

tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }

rusqlite = { version = "0.32.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2", "chrono"] }
dotenvy = "0.15"
chrono = { version = "0.4.38", features = ["serde"] }


[features]
default = []
dev = []